# latale-tools-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  test_ldt_roundtrip.py  test_roundtrip.py
.github/workflows/: windows-gui.yml
docs/: 00_common_reference.md  01_animation_system.md  02_battle_system.md  03_terrain_system.md  04_fx_system.md  05_stage_system.md  06_ldt_database.md  07_mob_layer_system.md  08_spf_resource_system.md  08_spf_resource_system_encryption.md  STG_BINARY_STRUCTURE.md  latale-ldt-guide.md  latale-spf-guide.md  latale-stg-guide.md
docs/plans/: 2026-02-14-spf-cli-design.md  2026-02-14-spf-cli-impl.md  2026-02-15-file-list-display-design.md  2026-02-15-ldt-tool-design.md  2026-02-15-ldt-tool-impl.md  2026-02-17-cli-restructure-design.md  2026-02-19-ldt-encoding-support-design.md  2026-02-19-ldt-encoding-support.md
gui/: README.md  index.html  package-lock.json  package.json  tsconfig.json
gui/src/: App.svelte  main.ts  styles.css  types.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
gui/src-tauri/windows/: installer-hooks.nsh
scripts/: analyze_field_types.py  fix_ldt_footer.py
src/: lib.rs  main.rs
src/cli/: latale-ldt.rs  latale-spf.rs  latale-stg.rs
src/common/: encoding.rs  mod.rs
src/ldt/: csv.rs  mod.rs  reader.rs  types.rs  writer.rs
src/spf/: crypto.rs  mod.rs  reader.rs  registry.rs  types.rs  writer.rs
src/stg/: mod.rs  reader.rs  types.rs  writer.rs
