[package]
name = "latale-tools"
version = "0.1.0"
edition = "2021"
authors = ["LaTale Tools Contributors"]
description = "SPF file unpacker/packer for LaTale game resources"

[[bin]]
name = "latale-spf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
walkdir = "2"
indicatif = "0.17"
memmap2 = "0.9"
bytemuck = { version = "1.19", features = ["derive"] }
byteorder = "1"

[dev-dependencies]
tempfile = "3"
