[package]
name = "latale-tools"
version = "0.1.0"
edition = "2021"
authors = ["LaTale Tools Contributors"]
description = "SPF file unpacker/packer for LaTale game resources"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
memmap2 = "0.9"
bytemuck = { version = "1.22", features = ["derive"] }
encoding_rs = "0.8"
csv = "1.3"

[[bin]]
name = "latale-spf"
path = "src/cli/latale-spf.rs"

[[bin]]
name = "latale-ldt"
path = "src/cli/latale-ldt.rs"
