[package]
name = "latale-tools"
version = "0.0.2"
edition = "2021"
authors = ["LaTale Tools Contributors"]
description = "SPF file unpacker/packer for LaTale game resources"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
memmap2 = "0.9"
bytemuck = { version = "1.22", features = ["derive"] }
encoding_rs = "0.8"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "latale-spf"
path = "src/cli/latale-spf.rs"

[[bin]]
name = "latale-ldt"
path = "src/cli/latale-ldt.rs"

[[bin]]
name = "latale-stg"
path = "src/cli/latale-stg.rs"
